--- a/Lab-10/review.ipynb
+++ b/Lab-10/review.ipynb
@@ -176,13 +176,22 @@
     "        print(f\"{'  ' * depth}Right:\")\n",
     "        print_tree(node.right, depth + 1, feature_names)\n",
     "\n",
+    "#Algo for predict \n",
+    "'''1.iterate till the leaf node is reached\n",
+    "2.extract feature index of the node \n",
+    "3.check feature value in sample == 1\n",
+    "4.move rchild to curr node \n",
+    "5.move the lchild to curr node \n",
+    "6.return np.argmax(node.value)\n",
+    "'''\n",
+    "\n",
     "def predict(root_node, sample):\n",
     "    while not root_node.is_leaf():\n",
     "        feature_index = root_node.feature\n",
     "        if sample[feature_index] == 1:\n",
     "            root_node = root_node.right\n",
     "        else:\n",
-    "            return np.random.choice([0, 1])\n",
+    "            root_node = root_node.left\n",
     "    return np.argmax(root_node.value)\n",
     "\n",
     "\n",
@@ -196,34 +205,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature None (entropy = 0.940) , (samples = 14)\n",
-      "Left:\n",
-      "  Leaf Node, Class distrubution:[0 4]\n",
+      "Outlook_Overcast (entropy = 0.9402859586706311) (samples = 14)\n",
+      "Left\n",
+      " Leaf node, Class Distrubution:[0 4]\n",
       "Right\n",
-      " Feature None (entropy = 1.000) , (samples = 10)\n",
-      " Left:\n",
-      "  Feature None (entropy = 0.811) , (samples = 4)\n",
-      "  Left:\n",
-      "    Leaf Node, Class distrubution:[0 1]\n",
+      " Humidity (entropy = 1.0) (samples = 10)\n",
+      " Left\n",
+      "  Outlook_Rain (entropy = 0.8112781244591328) (samples = 4)\n",
+      "  Left\n",
+      "   Leaf node, Class Distrubution:[0 1]\n",
       "  Right\n",
-      "    Leaf Node, Class distrubution:[3 0]\n",
+      "   Leaf node, Class Distrubution:[3 0]\n",
       " Right\n",
-      "  Feature None (entropy = 0.918) , (samples = 6)\n",
-      "  Left:\n",
-      "   Feature None (entropy = 0.918) , (samples = 3)\n",
-      "   Left:\n",
-      "     Leaf Node, Class distrubution:[0 1]\n",
+      "  Wind (entropy = 0.9182958340544896) (samples = 6)\n",
+      "  Left\n",
+      "   Temp (entropy = 0.9182958340544896) (samples = 3)\n",
+      "   Left\n",
+      "    Leaf node, Class Distrubution:[0 1]\n",
       "   Right\n",
-      "     Leaf Node, Class distrubution:[2 0]\n",
+      "    Leaf node, Class Distrubution:[2 0]\n",
       "  Right\n",
-      "    Leaf Node, Class distrubution:[0 3]\n"
+      "   Leaf node, Class Distrubution:[0 3]\n",
+      "Predicted class for input [1, 0, 1, 0, 1, 0]: 1\n"
      ]
     }
    ],
@@ -231,7 +241,6 @@
     "import numpy as np\n",
     "import pandas as pd \n",
     "df = pd.read_csv('data.csv')\n",
-    "df\n",
     "df['Wind'] = df['Wind'].map({'Weak':0,'Strong':1})\n",
     "df['Decision'] = df['Decision'].map({'No':0,'Yes':1})\n",
     "df = pd.get_dummies(df,columns=['Outlook'])\n",
@@ -257,25 +266,24 @@
     "y = df['Decision'].values\n",
     "\n",
     "class TreeNode:\n",
-    "    def __init__(self,feature=None,entropy=None,value=None,left=None,right=None,samples=None):\n",
-    "        self.entropy = entropy\n",
+    "    def __init__(self,entropy=None,feature=None,sample=None,left=None,right=None,value=None):\n",
+    "        self.entropy = entropy \n",
+    "        self.feature = feature \n",
+    "        self.sample = sample\n",
+    "        self.left = left \n",
+    "        self.right = right \n",
     "        self.value = value\n",
-    "        self.feature = feature\n",
-    "        self.left = left\n",
-    "        self.right = right\n",
-    "        self.samples = samples\n",
-    "\n",
-    "    def is_leaf(self):\n",
-    "        return self.left is None and self.right is None\n",
     "    \n",
+    "    def is_leaf(self):\n",
+    "        return self.left is None and self.right is None \n",
+    "\n",
     "def compute_entropy(y):\n",
     "    entropy = 0\n",
     "    if len(y) > 0:\n",
-    "        p1 = len(y[y == 1]) / len(y)\n",
-    "        if p1 not in (0, 1):\n",
-    "            entropy = -p1 * np.log2(p1) - (1 - p1) * np.log2(1 - p1)\n",
-    "    return entropy\n",
-    "\n",
+    "        p1 = len(y[y == 1])/len(y)\n",
+    "        if p1 not in (0,1):\n",
+    "            entropy = -p1*np.log2(p1) - (1-p1)*np.log2(1-p1)\n",
+    "    return entropy \n",
     "\n",
     "def split_dataset(x,node_indices,feature):\n",
     "    left_indices,right_indices = [],[]\n",
@@ -297,13 +305,13 @@
     "    w_left = len(x_left)/len(x)\n",
     "    w_right = len(x_right)/len(x)\n",
     "    weighted_entropy = w_left*left_entropy + w_right*right_entropy\n",
-    "    info_gain = node_entropy - weighted_entropy\n",
-    "    return info_gain\n",
+    "    information_gain = node_entropy - weighted_entropy\n",
+    "    return information_gain\n",
     "\n",
-    "def get_best_feature_split(x,y,node_indices):\n",
+    "def get_best_split(x,y,node_indices):\n",
     "    num_features = x.shape[1]\n",
-    "    max_info_gain = -np.inf\n",
     "    best_feature = None\n",
+    "    max_info_gain = -np.inf\n",
     "    for feature in range(num_features):\n",
     "        info_gain = compute_information_gain(x,y,node_indices,feature)\n",
     "        if info_gain > max_info_gain:\n",
@@ -311,45 +319,55 @@
     "            best_feature = feature\n",
     "    return best_feature\n",
     "\n",
-    "\n",
-    "\n",
-    "def build_id3_tree(x,y,node_indices,current_depth,max_depth):\n",
+    "def build_tree(x,y,node_indices,current_depth,max_depth):\n",
     "    entropy = compute_entropy(y[node_indices])\n",
     "    value = np.bincount(y[node_indices],minlength=2)\n",
-    "    node = TreeNode(entropy=entropy,samples=len(node_indices),value=value)\n",
+    "    node = TreeNode(entropy=entropy,value=value,sample=len(node_indices)) \n",
     "    if current_depth == max_depth or entropy == 0 or len(np.unique(y[node_indices])) == 1:\n",
     "        return node \n",
-    "    best_feature = get_best_feature_split(x,y,node_indices)\n",
+    "    best_feature = get_best_split(x,y,node_indices)\n",
     "    if best_feature is None:\n",
-    "        return node\n",
+    "        return node \n",
+    "    node.feature = best_feature\n",
     "    left_indices,right_indices = split_dataset(x,node_indices,best_feature)\n",
-    "    if left_indices is not None:\n",
-    "        node.left = build_id3_tree(x,y,left_indices,current_depth+1,max_depth)\n",
-    "    if right_indices is not None:\n",
-    "        node.right = build_id3_tree(x,y,right_indices,current_depth+1,max_depth)\n",
-    "    return node \n",
+    "    if left_indices:\n",
+    "        node.left = build_tree(x,y,left_indices,current_depth+1,max_depth)\n",
+    "    if right_indices:\n",
+    "        node.right = build_tree(x,y,right_indices,current_depth+1,max_depth)\n",
+    "    return node\n",
     "\n",
-    "def print_tree(node,depth=0,feature_names=None):\n",
+    "def print_tree(node,feature_names=None,depth=0):\n",
     "    if feature_names is not None and node.feature is not None:\n",
     "        feature_name = feature_names[node.feature]\n",
     "    else:\n",
-    "        feature_name = f\"Feature {node.feature}\"\n",
-    "    \n",
+    "        feature_name = f'Feature {node.feature}'\n",
     "    if node.is_leaf():\n",
-    "        print(f\"{' '  * depth} Leaf Node, Class distrubution:{node.value}\")\n",
+    "        print(f\"{' '*depth}Leaf node, Class Distrubution:{node.value}\")\n",
     "    else:\n",
-    "        print(f\"{' ' * depth}{feature_name} (entropy = {node.entropy:.3f}) , (samples = {node.samples})\")\n",
-    "    \n",
-    "    if node.left is not None:\n",
-    "        print(f\"{' '*depth}Left:\")\n",
-    "        print_tree(node.left,depth+1,feature_names)\n",
-    "    if node.right is not None:\n",
+    "        print(f\"{' '*depth}{feature_name} (entropy = {node.entropy}) (samples = {node.sample})\")\n",
+    "    if node.left:\n",
+    "        print(f\"{' '*depth}Left\")\n",
+    "        print_tree(node.left,feature_names=feature_names,depth=depth+1)\n",
+    "    if node.right:\n",
     "        print(f\"{' '*depth}Right\")\n",
-    "        print_tree(node.right,depth+1,feature_names)\n",
+    "        print_tree(node.right,feature_names=feature_names,depth=depth+1)\n",
     "\n",
-    "root_node = build_id3_tree(x,y,list(range(len(y))),current_depth=0,max_depth=6)\n",
-    "feature_names = df.drop('Decision',axis=1).columns.tolist()\n",
-    "print_tree(root_node,feature_names=feature_names)\n"
+    "\n",
+    "def predict(node,sample):\n",
+    "    while not node.is_leaf():\n",
+    "        feature_index = node.feature\n",
+    "        if sample[feature_index] == 1:\n",
+    "            node = node.right\n",
+    "        else:\n",
+    "            node = node.left\n",
+    "    return np.argmax(node.value)\n",
+    "\n",
+    "root = build_tree(x,y,list(range(len(y))),0,6)\n",
+    "feature_names = df.drop('Decision',axis=1).columns.to_list()\n",
+    "print_tree(root,feature_names=feature_names,depth=0)\n",
+    "sample_input = [1, 0, 1, 0, 1, 0]\n",
+    "y_pred = predict(root,sample_input)\n",
+    "print(f\"Predicted class for input {sample_input}: {y_pred}\")"
    ]
   },
   {
@@ -357,76 +375,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Algo for build tree \n",
-    "'''1.find the node entropy\n",
-    "2.compute bincount of class label\n",
-    "3.create obj of tree class \n",
-    "4. check for stop condition where entropy is 0 or curr == max_depth or only a unique class label left \n",
-    "5.compute best feature split and check if best feature exists \n",
-    "6.split dataset with best feature \n",
-    "7.if there exists left_subtree update node.left with recursive call similarly apply to the right\n",
-    "8.return node'''\n",
-    "\n",
-    "def build_id3_tree(x,y,node_indices,current_depth,max_depth):\n",
-    "    entropy = compute_entropy(y[node_indices])\n",
-    "    values = np.bincount(y[node_indices],minlength=2)\n",
-    "    node = TreeNode(entropy=entropy,samples=len(node_indices),value=values)\n",
-    "    if current_depth == max_depth or entropy == 0 or len(np.unique(y[node_indices])) == 1:\n",
-    "        return node\n",
-    "    best_feature = get_best_feature_split(x,y,node_indices)\n",
-    "    if best_feature is None:\n",
-    "        return node\n",
-    "    left_indices,right_indices = split_dataset(x,node_indices,best_feature)\n",
-    "    if left_indices is not None:\n",
-    "        node.left = build_id3_tree(x,y,left_indices,current_depth + 1,max_depth)\n",
-    "    if right_indices is not None:\n",
-    "        node.right = build_id3_tree(x,y,right_indices,current_depth + 1,max_depth)\n",
-    "    return node\n",
-    "\n",
-    "\n",
-    "#Algo for print_tree \n",
-    "'''1.check if feature names is not none and also node.feature is not none assign the feature name\n",
-    "2.check if we reached the leaf node print the depth(indent spacing) and class dist\n",
-    "3.else print the feature_name, node.entropy and node.samples\n",
-    "4.if left subtree is exists print depth and recursively call print_tree function similarly do it for the right subtree '''\n",
-    "\n",
-    "\n",
-    "def print_tree(node,depth=0,feature_names=None):\n",
-    "    if feature_names is not None and node.feature is not None:\n",
-    "        feature_name = feature_names[node.feature]\n",
-    "    else:\n",
-    "        feature_name = \n",
-    "    if node.is_leaf():\n",
-    "        print(f\"' '*{depth} Class disturbution: {node.value} \")\n",
-    "    else:\n",
-    "        print(f\"' '*{depth}{feature_name} (entropy:{node.entropy:.3f}) (samples:{node.samples:.3f})\")\n",
-    "    \n",
-    "    if node.left is not None:\n",
-    "        print(f\"' '*{depth}Left:\")\n",
-    "        print_tree(node.left,depth+1,feature_names)\n",
-    "    if node.right is not None:\n",
-    "        print(f\"' '*{depth}Right:\")\n",
-    "        print_tree(node.right,depth+1,feature_names)\n",
-    "\n",
-    "\n",
-    "def build_id3_tree(x,y,node_indices,current_depth,max_depth):\n",
-    "    entropy = compute_entropy(y[node_indices])\n",
-    "    values = np.bincount(y[node_indices],minlength=2)\n",
-    "    node = TreeNode(entropy=entropy,samples=len(node_indices),value=values)\n",
-    "    if current_depth == max_depth or entropy == 0 or len(np.unique(y[node_indices])) == 1:\n",
-    "        return node\n",
-    "    best_feature = get_best_feature_split(x,y,node_indices)\n",
-    "    if best_feature is None:\n",
-    "        return node \n",
-    "    left_indices,right_indices = split_dataset(x,node_indices,best_feature)\n",
-    "    if left_indices is not None:\n",
-    "        node.left = build_id3_tree(x,y,left_indices,current_depth+1,max_depth)\n",
-    "    if right_indices is not None:\n",
-    "        node.right = build_id3_tree(x,y,right_indices,current_depth+1,max_depth)\n",
-    "    return node\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
